[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
torch = "^1.10.1"
pfrl = "^0.3.0"
navstack-gym = "^0.1.10"
h5py = "^3.6.0"
torchvision = "^0.11.2"
kornia = "^0.6.2"
hydra-core = "^1.1.1"
Hydra = "^2.5"
PyYAML = "^6.0"
imageio = "^2.13.5"
termcolor = "^1.1.0"
tensorboard = "^2.7.0"
hydra-submitit-launcher = "^1.1.6"
opencv-python = "3.4.13.47"
gym = {extras = ["atari", "accept-rom-license"], version = "^0.21.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
